src/sass/style.sass
@import url('https://fonts.googleapis.com/css?family=Yeseva+One|Source+Sans+Pro')
$source-sans: 'Source Sans Pro', sans-serif
$cursive: 'Yeseva One', cursive
// *
//     padding: 0
//     margin: 0
body
    font-family: Arial, Helvetica, sans-serif
    margin: 0
    padding: 0
p, li
    font-family: $source-sans
ul
    padding: 0
p, li
    font-size: 1em
    // margin: 1em auto
li
    list-style-type: none
    list-style-image: none
    display: inline-block
    padding: 5px
h1, h2, h3, h4
    font-family: $cursive
    font-weight: 500
    letter-spacing: 0.07em
h1
    font-size: 40px
    margin: 0.67em auto
h2
    font-weight: 500
    margin: 0.83em auto
a, a:visited, a:active,
    color: #666
    text-decoration: none
    transition: all .1s ease-in-out
a:hover
    color: #222
.content
    width: 80%
    margin: 0 auto
.contents
    display: flex
    align-items: center
    justify-content: center
            
            
.head
    text-align: center
.main
    line-height: 40px
    width: 70%
    margin: 0 auto
    display: none
#intro, #terms, #foreword, #display
    display: block
.pagin
    width: 100%
    display: flex
    align-items: center
    justify-content: center
    .nextpage, .prevpage
        display: none
        width: 100%
        height: 200px
        bottom: 10px
        color: #333
        transition: background-color .2s, color .2s
        display: flex
        align-items: center
        justify-content: center
        cursor: pointer
        .next, .title
            transition: all .2s ease-in-out
            font-size: 40px
            font-family: $cursive
            font-weight: bold
            text-align: center
        .next
            position: absolute
            z-index: -999
            opacity: 1
        .title
            z-index: 999
            opacity: 0
    .nextpage:hover, .prevpage:hover
        .next
            opacity: 0
        .title
            opacity: 1
.full-length
        width: 100%

